crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__bytes_default_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data bData (trace "operand" in (con bytestring #6e617368)) of
  DataList wrong#6 -> trace "wrong" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_7
    (force
      [[[[[[(force (builtin chooseData)) generated_7] (delay (error))] (delay (error))]
        (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
        (delay (error))]
        (delay (error))]))
    [(builtin bData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay (con bytestring #6e617368))])]])
--- optimized Core
let anf#2 : bytes = trace "operand" in (con bytestring #6e617368) in
let anf#3 : Data = bData anf#2 in
error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_1 [(lam anf_4 (error)) [(builtin bData) anf_1]])
      (force [[builtin_5 (con string "operand")] (delay (con bytestring #6e617368))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#7 : bytes = trace "operand" in (con bytestring #6e617368) in
let anf#8 : Data = bData anf#7 in
case@Data anf#8 of
  DataList wrong#6 -> trace "wrong" in error
--- isolated folded Core
let anf#7 : bytes = trace "operand" in (con bytestring #6e617368) in
let anf#8 : Data = bData anf#7 in
error
--- isolated cleaned Core
let anf#7 : bytes = trace "operand" in (con bytestring #6e617368) in
let anf#8 : Data = bData anf#7 in
error
--- isolated UPLC before
(program 1.1.0
  [(lam anf_7
    [(lam anf_8
      [(lam generated_9
        (force
          [[[[[[(force (builtin chooseData)) generated_9] (delay (error))] (delay (error))]
            (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
            (delay (error))]
            (delay (error))]))
        anf_8])
      [(builtin bData) anf_7]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con bytestring #6e617368))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_7 [(lam anf_8 (error)) [(builtin bData) anf_7]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con bytestring #6e617368))])])
--- result
error: ExplicitErrorTerm
--- logs
["operand"]
