crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__bytes_default_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data bData (trace "operand" in (con bytestring #6e617368)) of
  DataList wrong#6 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_7
    (force
      [[[[[[(force (builtin chooseData)) generated_7]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]))
    [(builtin bData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay (con bytestring #6e617368))])]])
--- optimized Core
let anf#2 : bytes = trace "operand" in (con bytestring #6e617368) in
let anf#3 : Data = bData anf#2 in
case@Data anf#3 of
  DataList wrong#1 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam builtin_9
      [(lam partial_10
        [(lam anf_4
          [(lam anf_5
            [(lam generated_8
              (force
                [[[[[[builtin_9 generated_8] (delay (force [partial_10 (delay (con integer 9))]))]
                  (delay (force [partial_10 (delay (con integer 9))]))]
                  (delay (force [[builtin_7 (con string "wrong")] (delay (error))]))]
                  (delay (force [partial_10 (delay (con integer 9))]))]
                  (delay (force [partial_10 (delay (con integer 9))]))]))
              anf_5])
            [(builtin bData) anf_4]])
          (force [[builtin_7 (con string "operand")] (delay (con bytestring #6e617368))])])
        [builtin_7 (con string "fallback")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#9 : bytes = trace "operand" in (con bytestring #6e617368) in
let anf#10 : Data = bData anf#9 in
case@Data anf#10 of
  DataList wrong#6 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- isolated folded Core
let anf#9 : bytes = trace "operand" in (con bytestring #6e617368) in
let anf#10 : Data = bData anf#9 in
trace "fallback" in 9
--- isolated cleaned Core
let anf#9 : bytes = trace "operand" in (con bytestring #6e617368) in
let anf#10 : Data = bData anf#9 in
trace "fallback" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_9
    [(lam anf_10
      [(lam generated_11
        (force
          [[[[[[(force (builtin chooseData)) generated_11]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]))
        anf_10])
      [(builtin bData) anf_9]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con bytestring #6e617368))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_9
    [(lam anf_10
      (force
        [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))
      [(builtin bData) anf_9]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con bytestring #6e617368))])])
--- result
(con integer 9)
--- logs
["operand", "fallback"]
