crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__bytes_invalid_duplicate.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(before), pretty(after))"
---
--- before
let data#4 : Data = bData (con bytestring #6e617368) in
case@Data data#4 of
  DataB payload#3 -> 42
  DataB payload#3 -> 42
--- after
let data#4 : Data = bData (con bytestring #6e617368) in
case@Data data#4 of
  DataB payload#3 -> 42
  DataB payload#3 -> 42
--- errors
InvalidCase("invalid Data branch")
InvalidCase("invalid Data branch")
