crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__bytes_invalid_function_fallback_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data bData (\x#20 : int -> x#20) of
  DataB unused#27 -> 9
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_28
    (force
      [[[[[[(force (builtin chooseData)) generated_28]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay (con integer 9))]))
    [(builtin bData) (lam x_20 x_20)]])
--- optimized Core
let anf#3 : Data = bData (\x#1 : int -> x#1) in
9
--- optimized UPLC
(program 1.1.0 [(lam anf_4 (con integer 9)) [(builtin bData) (lam x_2 x_2)]])
--- isolated pass
--- isolated ANF input
let anf#28 : Data = bData (\x#20 : int -> x#20) in
case@Data anf#28 of
  DataB unused#27 -> 9
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#29 : int -> int = \x#20 : int -> x#20 in
let anf#28 : Data = bData data_operand#29 in
let unused#27 : int -> int = data_operand#29 in
9
--- isolated cleaned Core
let anf#28 : Data = bData (\x#20 : int -> x#20) in
9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_28
    [(lam generated_29
      (force
        [[[[[[(force (builtin chooseData)) generated_29]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay (con integer 9))]))
      anf_28])
    [(builtin bData) (lam x_20 x_20)]])
--- isolated UPLC after
(program 1.1.0 [(lam anf_28 (con integer 9)) [(builtin bData) (lam x_20 x_20)]])
--- result
error: NotAConstant(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)), env: Empty })
--- logs
[]
