crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__bytes_invalid_function_fallback_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data bData (\x#20 : int -> x#20) of
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_21
    (force
      [[[[[[(force (builtin chooseData)) generated_21]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
    [(builtin bData) (lam x_20 x_20)]])
--- optimized Core
let anf#2 : Data = bData (\x#1 : int -> x#1) in
trace "unreachable" in 0
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_4
      (force [[builtin_5 (con string "unreachable")] (delay (con integer 0))]))
      [(builtin bData) (lam x_3 x_3)]])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#31 : Data = bData (\x#20 : int -> x#20) in
case@Data anf#31 of
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#32 : int -> int = \x#20 : int -> x#20 in
let anf#31 : Data = bData data_operand#32 in
trace "unreachable" in 0
--- isolated cleaned Core
let anf#31 : Data = bData (\x#20 : int -> x#20) in
trace "unreachable" in 0
--- isolated UPLC before
(program 1.1.0
  [(lam anf_31
    [(lam generated_32
      (force
        [[[[[[(force (builtin chooseData)) generated_32]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
      anf_31])
    [(builtin bData) (lam x_20 x_20)]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_31
    (force
      [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))
    [(builtin bData) (lam x_20 x_20)]])
--- result
error: NotAConstant(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)), env: Empty })
--- logs
[]
